--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div
       class="container border border-primary p-4 mt-3 rounded w-25 h-100 shadow p-3 mb-5 bg-white rounded float"
+      id="background"
     >
       <div class="row">
         <div class="col-12">
