open source link added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
         </div>
       </div>
     </div>
+    <div class="row p-4 mt-2 w-100 h-25 center" id="link">
+      <div class="col-12">
+        <small>
+          <a
+            href="https://github.com/nadiacoralves/weather-coding"
+            target="_blank"
+            >Open source-code,</a
+          >
+          by Nádia Correia Gonçalves.
+        </small>
+      </div>
+    </div>
+
     <script src="Script.js"></script>
   </body>
 </html>
