--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               autofocus="on"
               id="searched-text"
             />
-            <input type="submit" value="Search" />
+            <input type="submit" value="Search" class="form-control-sm" />
           </form>
         </div>
       </div>
