type of paragraph changed

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </div>
       <div class="row">
         <div class="col p-5">
-          <h1 style="font-size: 90px;">
+          <p style="font-size: 90px;">
             <span id="temperature"></span>
             <span class="temperature-metric"
               ><a href="#" id="celsius">ºC</a> |
               <a href="#" id="fahrenheit">ºF</a></span
             >
-          </h1>
+          </p>
         </div>
       </div>
       <div class="row">
