changed paragraph style and position

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-6 p-4 text-left" id="description">
+          Mostly Sunny
+        </div>
+      </div>
+      <div class="row">
         <div class="col p-10">
           <p style="font-size: 90px;">
             <span id="temperature"></span>
@@ -60,9 +65,6 @@
               <a href="#" id="fahrenheit">ºF</a></span
             >
           </p>
-        </div>
-        <div class="col p-3 text-left">
-          Mostly Sunny
         </div>
       </div>
       <div class="row">
