--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@
       <div class="row">
         <div class="col-8 p-4 mt-2 ml-0">
           <form id="search-form">
-            <div class="">
               <input
-                type="text"
+                type="search"
                 class="form-control"
-                name="city"
                 placeholder="Search for city..."
                 autocomplete="off"
                 autofocus="off"
-                id="searched-text"
+                id="city-input"
               />
-            </div>
           </form>
         </div>
       </div>
