right list css adjusted

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
               <p><span id="wind" style="font-size: 17px;"></span> km/h</p>
             </li>
             <li>
-              Humidity
+              <span id="humidityName">Humidity</span>
               <p><span id="humidity" style="font-size: 17px;"></span> %</p>
             </li>
             <li>
-              Pressure
+              <span id="pressureName">Pressure</span>
               <p><span id="pressure" style="font-size: 17px;"></span> sPa</p>
             </li>
           </ul>
