celsius and fahrenheit functions working

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 placeholder="Search for city..."
                 autocomplete="off"
                 autofocus="off"
-                id="city-input"
+                id="search-input"
               />
           </form>
         </div>
@@ -62,7 +62,7 @@
 
             <span id="temperature" style="font-size: 90px;"></span>
             <span class="temperature-metric"
-              ><a href="#" id="celsius">ºC</a>|<a href="#" id="fahrenheit">ºF</a></span>
+              ><a href="#" id="celsius-link">ºC</a>|<a href="#" id="fahrenheit-link">ºF</a></span>
 
             <img src="/" alt="clear" class="foat-left ml-2" id="icon" />
 
