classlist activation, link removed and added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <span id="temperature" style="font-size: 90px;"></span>
             <span class="temperature-metric"
-              ><a href="#" id="celsius-link">ºC</a>|<a href="#" id="fahrenheit-link">ºF</a></span>
+              ><a href="#" id="celsius-link" class="active">ºC</a>|<a href="#" id="fahrenheit-link">ºF</a></span>
 
             <img src="/" alt="clear" class="foat-left ml-2" id="icon" />
 
