--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="row p-10 mt-20 w-100 h-25 center" id="link">
       <div class="col-12">
         <small>
-          <a
+          <a class="source"
             href="https://github.com/nadiacoralves/weather-coding"
             target="_blank"
             >Open source-code, by Nádia Correia Gonçalves.</a
