--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <div class="row">
         <hr style="color:white;">
       </div>
-      <div class="row forecast p-4">
-       <div class="col-2">
+      <div class="row p-4" id="next-hours">
+       <div class="col-2 forecast">
           <h6 class="font-family-sans-serif">SUN</h6>
           <img scr="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
           <div class="forecast-temperature">25°</div>
