--- a/index.html
+++ b/index.html
@@ -77,15 +77,10 @@
             </li>
           </ul>
       </div>
-      <div class="row">
-        <hr style="color:white;">
+      <div>
+        <hr>
       </div>
       <div class="row p-4" id="next-hours">
-       <div class="col-2 forecast">
-          <h6 class="font-family-sans-serif">SUN</h6>
-          <img scr="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-          <div class="forecast-temperature">25°</div>
-        </div>
       </div>
     </div>
 
