css and position on hr improved

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
               <p><span id="pressure" style="font-size: 17px;"></span> sPa</p>
             </li>
           </ul>
-      </div>
-      <div>
-        <hr>
-      </div>
+        </div>
+        <div class="col-12">
+          <hr>
+        </div>
       <div class="row p-4" id="next-hours">
       </div>
     </div>
