media queries and changed temperature column, position

--- a/index.html
+++ b/index.html
@@ -54,14 +54,26 @@
         </div>
       </div>
       <div class="row temperature-container">
-        <div class="col-6">
+        <div class="col-7">
+          <div class="row">
+
+            <div class="col-6">
             <span id="temperature" style="font-size: 90px;"></span>
+            </div>
+
+           <div class="row">
+            <div class="col-12">
             <span class="temperature-metric"
               ><a href="#" id="celsius-link" class="active">ºC</a>|<a href="#" id="fahrenheit-link">ºF</a></span>
+            </div>
+           </div>
 
+
+
+          </div>
             <img src="/" alt="clear" class="foat-left ml-2" id="icon" />
         </div>
-        <div class="col-6">
+        <div class="col-5">
           <ul style="list-style: none;">
             <li>
               Wind
@@ -80,15 +92,15 @@
         <div class="col-12">
           <hr>
         </div>
-      <div class="row p-4" id="next-hours">
+      <div class="row p-4 next-hours" id="next-hours">
       </div>
     </div>
 
     </div>
-    <div class="row p-10 mt-20 w-100 h-25 center" id="link">
+    <div class="row mt-20 h-25 center" id="link">
       <div class="col-12">
         <small>
-          <a class="source"
+          <a class="col-12 source"
             href="https://github.com/nadiacoralves/weather-coding"
             target="_blank"
             >Open source-code, by Nádia Correia Gonçalves.</a
