changed search margin

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       id="background"
     >
       <div class="row">
-        <div class="col-8 p-4 mt-2 ml-0">
+        <div class="col-8 p-4 ml-0">
           <form id="search-form">
               <input
                 type="search"
