--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            <div class="row">
             <div class="col-12">
             <span class="temperature-metric"
-              ><a href="#" id="celsius-link" class="active">ºC</a>|<a href="#" id="fahrenheit-link">ºF</a></span>
+              ><a href="#" id="celsius-link" class="active">ºC</a><span id="metric-separation">|</span><a href="#" id="fahrenheit-link">ºF</a></span>
             </div>
            </div>
 
