changed metric position again

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="row mt-20 h-25 center" id="link">
+    <div class="row center" id="link">
       <div class="col-12">
         <small>
           <a
