Open source code sentence changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="row">
-        <div class="col-12 ">
+        <div class="col-12">
           <h1 id="city"></h1>
 
           <div class="row">
@@ -97,7 +97,7 @@
             class="col-12 source"
             href="https://github.com/nadiacoralves/weather-coding"
             target="_blank"
-            >Open source-code, by Nádia Correia Gonçalves.</a
+            >Designed and coded, by Nádia Correia Gonçalves.</a
           >
         </small>
       </div>
